--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
+    <meta
+      name="description"
+      content="Что делать, когда не можешь делать ничего и
+ почему нам так сложно сконцентрироваться"
+    />
+    <meta property="og:title" content="Сложно сосредоточиться" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <span class="header__pseudo-element" aria-hidden="true"></span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -35,6 +52,196 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title page__title-decor">no focus</h1>
+      <p class="header__paragraph title-decor">
+        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
+        сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+    <main class="content">
+      <section class="content__section content__section-grid">
+        <h2 class="content__title">Почему сосредоточиться так сложно</h2>
+        <article class="content__article">
+          <h3 class="content__subtitle title-decor">Многозадачность</h3>
+          <p class="content__text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи
+            <a
+              class="content__section-link"
+              href="https://dana.org/news-and-insights/"
+              target="_blank"
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
+          </p>
+          <h3 class="content__subtitle title-decor">Дофамин</h3>
+          <p class="content__text">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </article>
+      </section>
+      <section class="content__section content__section-position">
+        <h2 class="content__title content__title-size">
+          Что снижает концентрацию внимания?
+        </h2>
+        <article class="content-block">
+          <h3 class="content__subtitle title-decor">Многозадачность</h3>
+          <p class="content__text">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
+        </article>
+        <article class="content-block">
+          <h3 class="content__subtitle title-decor">Еда</h3>
+          <p class="content__text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
+        </article>
+        <article class="content-block">
+          <h3 class="content__subtitle title-decor">Гаджеты</h3>
+          <p class="content__text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </p>
+        </article>
+      </section>
+      <section class="content__section content__section-grid">
+        <h2 class="content__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <article class="content__article">
+          <h3 class="content__subtitle content__recommendations title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="content__list">
+            <li class="content__list-item">
+              <h4 class="content__list-title title-decor">
+                Представьте небо и облака
+              </h4>
+              <p class="content__text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-title title-decor">Включите музыку</h4>
+              <p class="content__text">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист с «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-title title-decor">Прогуляйтесь</h4>
+              <p class="content__text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a
+                  class="content__section-link"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-title title-decor">Хорошо ешьте</h4>
+              <p class="content__text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-title title-decor">Читайте</h4>
+              <p class="content__text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="content__section-pictures">
+        <h2 class="content__title title-decor">А можно в картинках?</h2>
+        <article class="content__article-grid">
+          <img
+            loading="lazy"
+            class="content__picture content__picture-sunset"
+            src="./images/sunset.png"
+            alt="Изображение моря и гор в фиолетово-розовых тонах на закате"
+          />
+          <img
+            loading="lazy"
+            class="content__picture content__picture-ice-cream"
+            src="./images/ice-cream.png"
+            alt="Милое изображение мороженного в тарелочке"
+          />
+          <img
+            loading="lazy"
+            class="content__picture content__picture-tape"
+            src="./images/tape.png"
+            alt="Изображение кассеты для музыкального плеера"
+          />
+          <img
+            loading="lazy"
+            class="content__picture content__picture-books"
+            src="./images/books.png"
+            alt="Изображение стопки книг, на вершине чашка с надписью - Читай больше"
+          />
+          <img
+            loading="lazy"
+            class="content__picture content__picture-street"
+            src="./images/street.png"
+            alt="Изображение улица с домами по краям в розово-фиолетовых тонах"
+          />
+        </article>
+      </section>
+    </main>
+    <footer class="footer decorated-zone">
+      <h5 class="page__title-decor footer__title">focus</h5>
+    </footer>
   </body>
 </html>
