Исправлена ошибка после автотеста, сброшены отступы у боди, добавлены отступы по макету у хедер, маин и футер

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </p>
     </header>
     <main class="content">
-      <section class="content__section content__section-grid">
+      <section class="content__section content__section--grid">
         <h2 class="content__title">Почему сосредоточиться так сложно</h2>
         <article class="content__article">
           <h3 class="content__subtitle title-decor">Многозадачность</h3>
@@ -92,8 +92,8 @@
           </p>
         </article>
       </section>
-      <section class="content__section content__section-position">
-        <h2 class="content__title content__title-size">
+      <section class="content__section content__section--position">
+        <h2 class="content__title content__title--size">
           Что снижает концентрацию внимания?
         </h2>
         <article class="content-block">
@@ -131,7 +131,7 @@
           </p>
         </article>
       </section>
-      <section class="content__section content__section-grid">
+      <section class="content__section content__section--grid">
         <h2 class="content__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -206,37 +206,37 @@
       </section>
       <section class="content__section-pictures">
         <h2 class="content__title title-decor">А можно в картинках?</h2>
-        <article class="content__article-grid">
-          <img
-            loading="lazy"
-            class="content__picture content__picture-sunset"
-            src="./images/sunset.png"
-            alt="Изображение моря и гор в фиолетово-розовых тонах на закате"
-          />
-          <img
-            loading="lazy"
-            class="content__picture content__picture-ice-cream"
-            src="./images/ice-cream.png"
-            alt="Милое изображение мороженного в тарелочке"
-          />
-          <img
-            loading="lazy"
-            class="content__picture content__picture-tape"
-            src="./images/tape.png"
-            alt="Изображение кассеты для музыкального плеера"
-          />
-          <img
-            loading="lazy"
-            class="content__picture content__picture-books"
-            src="./images/books.png"
-            alt="Изображение стопки книг, на вершине чашка с надписью - Читай больше"
-          />
-          <img
-            loading="lazy"
-            class="content__picture content__picture-street"
-            src="./images/street.png"
-            alt="Изображение улица с домами по краям в розово-фиолетовых тонах"
-          />
+        <article class="content__article--grid">
+            <img
+              loading="lazy"
+              class="content__picture content__picture-sunset"
+              src="./images/sunset.png"
+              alt="Изображение моря и гор в фиолетово-розовых тонах на закате"
+            />
+            <img
+              loading="lazy"
+              class="content__picture content__picture-ice-cream"
+              src="./images/ice-cream.png"
+              alt="Милое изображение мороженного в тарелочке"
+            />
+            <img
+              loading="lazy"
+              class="content__picture content__picture-tape"
+              src="./images/tape.png"
+              alt="Изображение кассеты для музыкального плеера"
+            />
+            <img
+              loading="lazy"
+              class="content__picture content__picture-books"
+              src="./images/books.png"
+              alt="Изображение стопки книг, на вершине чашка с надписью - Читай больше"
+            />
+            <img
+              loading="lazy"
+              class="content__picture content__picture-street"
+              src="./images/street.png"
+              alt="Изображение улица с домами по краям в розово-фиолетовых тонах"
+            />
         </article>
       </section>
     </main>
